# VoiceFlow-Dispatcher

./: .gitignore  Dockerfile  Logic.md  Makefile  README.md  main.py  pyproject.toml
src/: __init__.py
src/agent/: dispatch.py  rl_bandit.py
src/config/: settings.py
src/core/: __init__.py  expections.py  logger.py  model.py
src/services/: azure_bus.py  azure_openai.py  azure_speech.py
src/utils/: audio.py
